v8/en/21_Group_Replication/09_Group_Replication_Variables/index.md
## 20.9 Group Replication Variables

[20.9.1 Group Replication System Variables](group-replication-system-variables.html)

[20.9.2 Group Replication Status Variables](group-replication-status-variables.html)

The next two sections contain information about MySQL server system
and server status variables which are specific to the Group
Replication plugin.

**Table 20.4 Group Replication Variable and Option Summary**

<table frame="box" rules="all" summary="Reference for MySQL Group Replication command-line options, system variables, and status variables."><col style="width: 20%"/><col style="width: 15%"/><col style="width: 15%"/><col style="width: 15%"/><col style="width: 15%"/><col style="width: 15%"/><col style="width: 15%"/><thead><tr><th scope="col">Name</th>
<th scope="col">Cmd-Line</th>
<th scope="col">Option File</th>
<th scope="col">System Var</th>
<th scope="col">Status Var</th>
<th scope="col">Var Scope</th>
<th scope="col">Dynamic</th>
</tr></thead><tbody><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_advertise_recovery_endpoints">group_replication_advertise_recovery_endpoints</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_allow_local_lower_version_join">group_replication_allow_local_lower_version_join</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_auto_increment_increment">group_replication_auto_increment_increment</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_autorejoin_tries">group_replication_autorejoin_tries</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_bootstrap_group">group_replication_bootstrap_group</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_clone_threshold">group_replication_clone_threshold</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_communication_debug_options">group_replication_communication_debug_options</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_communication_max_message_size">group_replication_communication_max_message_size</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_communication_stack">group_replication_communication_stack</a></th>
<td></td>
<td></td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_components_stop_timeout">group_replication_components_stop_timeout</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_compression_threshold">group_replication_compression_threshold</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_consistency">group_replication_consistency</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Both</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_enforce_update_everywhere_checks">group_replication_enforce_update_everywhere_checks</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_exit_state_action">group_replication_exit_state_action</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_applier_threshold">group_replication_flow_control_applier_threshold</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_certifier_threshold">group_replication_flow_control_certifier_threshold</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_hold_percent">group_replication_flow_control_hold_percent</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_max_quota">group_replication_flow_control_max_quota</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_member_quota_percent">group_replication_flow_control_member_quota_percent</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_min_quota">group_replication_flow_control_min_quota</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_min_recovery_quota">group_replication_flow_control_min_recovery_quota</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_mode">group_replication_flow_control_mode</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_period">group_replication_flow_control_period</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_flow_control_release_percent">group_replication_flow_control_release_percent</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_force_members">group_replication_force_members</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_group_name">group_replication_group_name</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_group_seeds">group_replication_group_seeds</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_gtid_assignment_block_size">group_replication_gtid_assignment_block_size</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_ip_allowlist">group_replication_ip_allowlist</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_ip_whitelist">group_replication_ip_whitelist</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_local_address">group_replication_local_address</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_member_expel_timeout">group_replication_member_expel_timeout</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_member_weight">group_replication_member_weight</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_message_cache_size">group_replication_message_cache_size</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_paxos_single_leader">group_replication_paxos_single_leader</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_poll_spin_loops">group_replication_poll_spin_loops</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-status-variables.html#statvar_group_replication_primary_member">group_replication_primary_member</a></th>
<td></td>
<td></td>
<td></td>
<td>Yes</td>
<td>Global</td>
<td>No</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_complete_at">group_replication_recovery_complete_at</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_get_public_key">group_replication_recovery_get_public_key</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_public_key_path">group_replication_recovery_public_key_path</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_reconnect_interval">group_replication_recovery_reconnect_interval</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_retry_count">group_replication_recovery_retry_count</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_ca">group_replication_recovery_ssl_ca</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_capath">group_replication_recovery_ssl_capath</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_cert">group_replication_recovery_ssl_cert</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_cipher">group_replication_recovery_ssl_cipher</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_crl">group_replication_recovery_ssl_crl</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_crlpath">group_replication_recovery_ssl_crlpath</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_key">group_replication_recovery_ssl_key</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_ssl_verify_server_cert">group_replication_recovery_ssl_verify_server_cert</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_tls_ciphersuites">group_replication_recovery_tls_ciphersuites</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_tls_version">group_replication_recovery_tls_version</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_recovery_use_ssl">group_replication_recovery_use_ssl</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_single_primary_mode">group_replication_single_primary_mode</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_ssl_mode">group_replication_ssl_mode</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_start_on_boot">group_replication_start_on_boot</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_transaction_size_limit">group_replication_transaction_size_limit</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_unreachable_majority_timeout">group_replication_unreachable_majority_timeout</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="group-replication-system-variables.html#sysvar_group_replication_view_change_uuid">group_replication_view_change_uuid</a></th>
<td>Yes</td>
<td>Yes</td>
<td>Yes</td>
<td></td>
<td>Global</td>
<td>Yes</td>
</tr></tbody></table>